--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -1,16 +1,17 @@
-#데이터소스 : MySQL
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://marketdb.cn1jtp8kkhli.ap-northeast-2.rds.amazonaws.com/marketdb?useSSL=false&amp;characterEncoding=UTF-8&amp;serverTimezone=Asia/Seoul
+# data source 
+spring.datasource.url=jdbc:mysql://marketdb.cn1jtp8kkhli.ap-northeast-2.rds.amazonaws.com/marketdb?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+
 spring.datasource.username=admin
 spring.datasource.password=peachmarket2022
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Setting
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8InnoDBDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=false
 
-# Logging Setting
-#logging.level.org.hibernate=info
+# logging level
+logging.level.com,market = debug
