--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,7 +13,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
