--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "sweetalert2": "^11.4.9",
+    "time-counting": "^2.0.2",
     "web-vitals": "^2.1.4",
     "zustand": "^3.7.2"
   },
@@ -40,6 +42,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "proxy": "http://localhost:8080"
   }
 }
