--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -12,5 +12,19 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=false
 
+#AWS S3 Bucket
+cloud.aws.stack.auto=false
+
+# AWS S3 Service bucket
+cloud.aws.s3.bucket=peachmarket-2022-bucket
+cloud.aws.region.static=ap-northeast-2
+
+# AWS S3 Bucket URL
+cloud.aws.s3.bucket.url=bucket주소를작성해주세요
+
+# multipart Size Config
+spring.http.multipart.max-file-size=1024MB
+spring.http.multipart.max-request-size=1024MB
+
 # logging level
 logging.level.com,market = debug
