--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -14,13 +14,19 @@ spring.jpa.properties.hibernate.format_sql=false
 
 
 # AWS S3
-cloud.aws.s3.bucket=peachmarket-2022-bucket
+cloud.aws.s3.bucket=peachmarket-bucket
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 
 # multipart Size Config
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
+
+#Device
+spring.mobile.devicedelegatingviewresolver.enabled:true
+spring.mobile.devicedelegatingviewresolver.normal-prefix=normal/
+spring.mobile.devicedelegatingviewresolver.mobile-prefix=mobile/
+spring.mobile.devicedelegatingviewresolver.tablet-prefix=tablet/
 
 # logging level
 logging.level.com.market = debug
