--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ Fitting/keras-contrib/
 Fitting/LIP_JPPNet/
 Fitting/.pytest_cache/
 Fitting/.vscode/
+
+Fitting/test.py
+Fitting/train.py
+Fitting/visualization.py
+Fitting/cp_dataset.py
+Fitting/neworks.py
+Fitting/requirments.txt
