--- a/Back-End/pom.xml
+++ b/Back-End/pom.xml
@@ -107,6 +107,14 @@
 			<artifactId>spring-websocket</artifactId>
 		</dependency>
 
+		<!-- JSON -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<repositories>
