--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -24,5 +24,7 @@ spring.servlet.multipart.max-request-size=1024MB
 
 # logging level
 logging.level.com.market = debug
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
 
+#JWT Secret Key 
 jwt.secret= peachmarket
